<resources>
    <string name="app_name">Planner</string>
    <string name="action_settings">Settings</string>
    <string name="expense_name">Expense name</string>
    <string name="done">Done</string>
    <string name="expense_cost">Expense Cost</string>
    <string name="Add_Expense">Add Expense</string>
    <string name="submit">Submit</string>
    <string name="salary_is_missing">Input Your salary!</string>
    <string name="salary">Salary:</string>
</resources>
